--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
+  "homepage": "https://doddydigitaldesign.github.io/react-snowpack",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
@@ -9,6 +12,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
