--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "homepage": "https://doddydigitaldesign.github.io/react-snowpack",
+  "name": "react-snowpack",
+  "private": true,
+  "homepage": "https://doddydigitaldesign.github.io/react-snowpack/",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
@@ -12,7 +14,6 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "gh-pages": "^3.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -28,6 +29,7 @@
     "@types/snowpack-env": "^2.3.0",
     "@web/test-runner": "^0.9.7",
     "chai": "^4.2.0",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.0.5",
     "snowpack": "^2.17.0",
     "typescript": "^4.0.0"
