--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "homepage": "https://doddydigitaldesign.github.io/react-snowpack/",
   "scripts": {
     "start": "snowpack dev",
-    "build": "snowpack build --clean && npm run nojekyll",
-    "nojekyll": "node ./config/copyNoJekyll.js",
+    "build": "snowpack build --clean",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
