include dotfiles in build, break up App.tsx

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "snowpack dev",
     "build": "snowpack build --clean",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build -t true",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
